theme/mindcrack/assets/stylesheets/style.scss
/* ... */
// About Panel
#about.about-panel {

	&> .container {

		// Because not normal paragraph content, with 1 margin at the bottom,
		// make the padding account for that to be even
		padding-bottom: 2rem;

		@include media-breakpoint-up(md) {
			display: table;

			border-collapse: separate;
  			border-spacing: 1.5rem;
		}

		.about_logo {

			background-image: url('../images/logo_white_vertical.svg');
			background-position: center;
			background-repeat: no-repeat;
			width: 11.90625rem;
			height: 7.8125rem;

			@include media-breakpoint-up(md) {
				display: table-cell; 
				vertical-align: middle;
			}

			@include media-breakpoint-down(sm) {
				margin: 0 auto;
			}

		}

		.about_text {
			padding-top: 1rem;
			padding-bottom: 1rem;

			@include media-breakpoint-up(md) {
				font-size: 1.125rem;
				line-height: 2rem;
				display: table-cell; 
				vertical-align: middle;
				border-left: 0.1875rem solid $mc-blue-light;
				padding-left: 1.5rem;
			}

			@include media-breakpoint-down(sm) {
				border-top: 0.1875rem solid $mc-blue-light;
				margin-top: 1.5rem;
				text-align: center;
				padding-left: 1rem;
				padding-right: 1rem;
			}

			p:last-child {
				margin-bottom: 0;
			}
		}
	}

	.about-panel-stat-line {
		background-color:rgba(0,0,0,0.14);

		.container {
			padding-top: 0.75rem;
			padding-bottom: 0.75rem;

			display: flex;
			flex-wrap: wrap;

			span.h4 {
				flex: none;
				margin: 0;
				padding-right:1rem;
			}

			div {
				display: flex;
				flex: 2;
				flex-wrap: wrap;
				justify-content: space-between; 

				&>span {
					padding-left:1rem;
				}
				.stat-heading {
					white-space: nowrap
				}
			}
		}

		.stat-heading {
			font-weight: bold;
		}
	}
}

.news-item {
	display: block; // needed to override in case it's an <a> tag

	.detail {
		@extend .text-muted;
	}

	h1 + .detail, h2 + .detail {
		margin-top: -0.75rem;
	}

	.detail + p {
		margin-top: 1rem;
	}

	@include media-breakpoint-down(xs) {
		h2 {font-size:$font-size-h2 / 1.75}
		h1 {font-size:$font-size-h1 / 1.75}
	}

	&.news-item-list {
		margin-bottom: 1rem;

		&:first-child {
			margin-top: 0;
		}

		@include make-row();
		@include make-col();
		@include make-col-span(12);

		.news-item-thumb {
			@include make-col();
			@include make-col-span(3);

			img {
				@include img-fluid();
			}

			div.no-thumb {
				width: 100%;
			}
		}

		.news-item-body {
			@include make-col();
			@include make-col-span(9);
		}

		@include media-breakpoint-down(md) {
			@include make-row(1rem);

			.news-item-thumb, .news-item-body {
				@include make-col(1rem);
			}
		}

		@include media-breakpoint-up(md) {
			margin-bottom: 2rem;

			&:last-child {
				margin-bottom: 1rem;
			}
		}
	}

	&.news-item-latest {
		
		.published {
			// Used to switch ordering
			display: table-footer-group;
		}

		h2 {
			// Used to switch ordering
			display: table-header-group; 

			// Custom style
			font-size: 1.125rem;
			color: $gray-dark;
			font-weight:500;
		}

		&:hover h2 {
			color: lighten($gray-dark, 20%)
		}

		@include media-breakpoint-up(md) {
			@include make-col-span(4);
			margin-left: 0;
			margin-right: 0;

			.news-item-thumb, .news-item-body {
				padding: 0;
				width:100%;

				.published, h2 {
					display: block;
				}
			}

			.published {
				margin-top: 0.5rem;
				margin-bottom:0.25rem;
			}
		}
	}

	figure {
		@extend .figure;
		margin-top: 1rem;
		margin-bottom: 1rem;

		img {
			@extend .figure-img;
			@extend .img-fluid;
		}

		figcaption {
			@extend .figure-caption;
		}
	}

	figure.main-image {
		@extend .center-block;

		@include media-breakpoint-up(md) {
			margin-top: 2rem;
			margin-bottom: 2rem;
			width: 75%;
		}

		figcaption {
			@extend .text-xs-right;
		}
	}
}

.news-list {
	@include make-row();

	hr {
		width: calc(100% - #{$grid-gutter-width});
		display: block;

		@include media-breakpoint-up(md) {
			margin-bottom: 2rem;
		}
	}
}

section#latest-news {
	@extend .news-list;
}

// Less than ideal non-flex solutions for older IE
.lt-ie10 {
	.about-panel-stat-line .container{

		div {
			text-align: justify;
			font-size: 0;
			&>span {
				display:inline-block;
				vertical-align: middle;
				font-size:1rem;
			}

			&:after {
				content: "";
				display: inline-block;
				width: 100%;
			}
		}

		&>span.h4 {
			display: block;
			font-size: $font-size-h4;
			margin: 0;
			margin-right: 2rem;
			@include pull-left;
		}

	}

	header#main-header {
		background-image: url('../images/mindcrack_header.jpg');
		background-size: cover;
		background-position: 50% 55%;
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#14000000', endColorstr='#191919',GradientType=0 ),
				progid:DXImageTransform.Microsoft.gradient( startColorstr='#40000000', endColorstr='#40191919',GradientType=0 );
		&:before {
			background-image: none;
		}

		@include media-breakpoint-down(xs) {
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20000000', endColorstr='#191919',GradientType=0 ),
					progid:DXImageTransform.Microsoft.gradient( startColorstr='#90000000', endColorstr='#70191919',GradientType=0 );
		}
	}
}

